<resources>
    <string name="app_name">Zamaneh Tribune</string>
    <string name="app_description">Zamaneh Tribune is a mobile RSS news reader with enhanced security features, offline reading and sharing capability.</string>
    <string name="title_rz">@string/app_name</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_help">@string/app_name</string>
    <string name="title_activity_downloads">@string/app_name</string>
    <string name="title_activity_uploads">@string/app_name</string>
    <string name="title_activity_add_feed">@string/app_name</string>
    <string name="title_activity_post">My Posts</string>
    <string name="title_activity_add_post">@string/app_name</string>
    <string name="title_activity_panic">@string/app_name</string>
    <string name="title_activity_view_media">@string/app_name</string>
    <string name="title_activity_settings">@string/app_name</string>
    <string name="title_activity_lock_screen">@string/app_name</string>
    <string name="title_activity_create_account">@string/app_name</string>
    <string name="title_activity_httpd_app_sender">SHARE APP</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_logout">Logout</string>
    <string name="menu_tag">Search by Tag</string>
    <string name="menu_share">Share</string>
    <string name="menu_panic">Panic</string>
    <string name="menu_radio">Radio</string>
    <string name="menu_add_post">Add post</string>
    <string name="feed_filter_display_photos">Display photos</string>
    <string name="feed_filter_popular">Popular</string>
    <string name="feed_filter_favorites">My Favorites</string>
    <string name="feed_filter_shared_stories">Stories Received</string>
    <string name="feed_filter_all_feeds">All Feeds</string>
    <string name="feed_filter_add_new">Manage Feeds</string>
    <string name="feed_filter_text">Text Feed</string>
    <string name="feed_filter_audio">Audio Feed</string>
    <string name="feed_filter_video">Video Feed</string>
    <string name="feed_share_popup_title">Share feed via</string>
    <string name="story_list_hint_add_favorite_text1">Make a list of your top stories here by tapping "favorite" in a story</string>
    <string name="story_list_hint_add_favorite_text2">Here are some favorites from fellow readers to hold you over:</string>
    <string name="story_list_hint_no_popular_text1">Stories get popular when comments are shared!</string>
    <string name="story_list_hint_no_popular_text2">These stories have long titles, perhaps they\'re worth talking about:</string>
    <string name="story_list_hint_no_shared_text1">The stories shared with you using Zamaneh Tribune’s Secure Share are listed here.</string>
    <string name="story_list_hint_no_shared_text2">To receive a share from a friend, go to the ‘Receive a Share’ screen from the side menu.</string>
    <string name="help_title">About Zamaneh Tribune</string>
    <string name="help_tor_title">Go Online with Tor?</string>
    <string name="help_tor_content">Tor is an open network that helps keep you safe online. It defends against network surveillance that threatens your personal freedom and privacy. You must use the Orbot app to connect to the Tor network.</string>
    <string name="help_tor_button">Go Online with Tor</string>
    <string name="help_wipe_title">Wipe the App</string>
    <string name="help_wipe_content">Tap the panic button to delete your personal data within Zamaneh Tribune. You can set the panic action to delete the entire app in your preferences.</string>
    <string name="help_wipe_button">Test panic button</string>
    <string name="help_share_title">Share locally, without Internet</string>
    <string name="help_share_content">Share stories, feeds and the entire app using the Zamaneh Tribune Secure Share. It\'s safe, easy and only requires a friend nearby with Bluetooth. App sharing requires a WiFi network or hotspot.</string>
    <string name="help_data_title">Minimize Data Use</string>
    <string name="help_data_content">Tips to reduce your data consumption:\n\n1. Sync only the feeds that matter to you most. Zamaneh Tribune allows you to sync individual feeds.\n\n2. Choose Bit Wise syncing mode in your preferences. This syncs only text, with the ability to load photos on a story by story basis.\n\n3. Expire your articles in a timely manner. Choose your time frame in your preferences.</string>
	<string name="about_zamaneh_title">About Zamaneh Tribune</string>
    <string name="about_zamaneh_content">Since 2007, Zamaneh Tribune has focused particularly on increasing public awareness on democracy and human rights in Iran. We strive for an informed, educated and empowered civil society that can act as a catalyst for change and reform and put an end to increasing violations of basic human rights in Iran.</string>
    <string name="help_terms_group_title">Terms and Licenses</string>
    <string name="help_terms_title">Terms and Licenses</string>
    <string name="help_terms_content">Software licenses and more information available online at: https://guardianproject.info/apps/</string>
    <string name="help_show_news">Got it. Show me the news!</string>
    <string name="help_feedback_title">Share Feedback</string>
    <string name="help_feedback_content">We\'re making improvements! Let us know how Courier is working for you at https://okthanks.typeform.com/to/tXYKpF</string>
    <string name="downloads_title">Media Downloads</string>
    <string name="downloads_complete">COMPLETE</string>
    <string name="downloads_in_progress">IN PROGRESS</string>
    <string name="downloads_operation_refresh">REFRESH</string>
    <string name="downloads_operation_cancel">CANCEL</string>
    <string name="story_comment_add_hint">Your comment here</string>
    <string name="pulldown_to_sync_no_net">No Internet. Try again later.</string>
    <string name="pulldown_to_sync">Pull down to re-sync feed</string>
    <string name="release_to_sync">Release to re-sync feed</string>
    <string name="last_synced_never">Never synced</string>
    <string name="last_synced_recently">Synced less than a minute ago</string>
    <string name="last_synced_minute">Synced %1$d minute ago</string>
    <string name="last_synced_hour">Synced %1$d hour ago</string>
    <string name="last_synced_day">Synced %1$d day ago</string>
    <string name="last_synced_minutes">Synced %1$d minutes ago</string>
    <string name="last_synced_hours">Synced %1$d hours ago</string>
    <string name="last_synced_days">Synced %1$d days ago</string>
    <string name="menu_news">News</string>
    <string name="menu_post">My Posts</string>
    <string name="menu_post_new">Create a Post</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_help">About Zamaneh Tribune</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_receive_share">Receive a Share</string>
    <string name="menu_submit_tip">Submit a Tip</string>
    <string name="menu_tor_connected">Connected to Tor</string>
    <string name="menu_tor_not_connected">Not connected to Tor</string>
    <string name="menu_num_feeds">%1$d feeds</string>
    <string name="menu_num_stories">%1$d posts</string>
    <string name="menu_num_chats">%1$d chats</string>
    <string name="menu_num_downloads">%1$d items</string>
    <string name="menu_preferences">Preferences</string>
    <string name="story_item_short_author">By %1s</string>
    <string name="story_item_short_published_never"></string>
    <string name="story_item_short_published_recently">Now</string>
    <string name="story_item_short_published_minutes">%1$d m</string>
    <string name="story_item_short_published_minute">%1$d m</string>
    <string name="story_item_short_published_hours">%1$d hr</string>
    <string name="story_item_short_published_hour">%1$d hr</string>
    <string name="story_item_short_published_days">%1$d d</string>
    <string name="story_item_short_published_day">%1$d d</string>
    <string name="story_item_short_tag_results">Showing results for ##%1s##</string>
    <string name="story_item_share_popup_title">Share story via</string>
    <string name="story_item_search_by_tag_hint">Search by #tag</string>
    <string name="story_item_swipe_hint_up">Up to close</string>
    <string name="story_item_swipe_hint_over">Over to read</string>
    <string name="story_item_read_with_orweb">Read full article</string>
    <string name="error_feed_404">Feed was not found</string>
    <string name="error_feed_bad_url">Feed URL is not valid, please visit "manage feeds" to modify or delete it.</string>
    <string name="error_feed_unknown">Error syncing feed, please try again</string>
    <string name="panic_settings">Panic Settings</string>
    <string name="panic_cancel">Cancel</string>
    <string name="panic_hint">Swipe down to delete the app</string>
    <string name="panic_hint_wipe_content">Swipe down to delete personal data</string>
    <string name="panic_test_successful">Good job! In a real scenario, you would have successfully completed a wipe.</string>
    <string name="add_feed_add">Add</string>
    <string name="add_feed_operation_remove">REMOVE</string>
    <string name="add_feed_operation_copy_url">COPY URL</string>
    <string name="add_feed_operation_copy_url_clipboard_label">Feed URL</string>
    <string name="add_feed_operation_cancel">CANCEL</string>
    <string name="add_feed_manual_label">Enter RSS Feed URL:</string>
    <string name="add_feed_manual_hint">figandquince.com/feed/</string>
    <string name="add_feed_processing">Processing</string>
    <string name="add_feed_default_topic">Your Feeds</string>
    <string name="add_feed_expand">Show All</string>
    <string name="add_feed_collapse">Close</string>
    <string name="add_feed_not_loaded">Feed data not loaded</string>
    <string name="add_feed_error_loading">We were unable to load this feed. Be sure that the RSS feed URL is correct.</string>
    <string name="settings_tor_require">Use Tor</string>
    <string name="settings_heading_chat">Chat</string>
    <string name="settings_gibberbot_connected">ChatSecure account connected</string>
    <string name="settings_heading_panic_action">Panic Action</string>
    <string name="settings_panic_action_info">Choose the action you want the panic button to take.</string>
    <string name="settings_panic_wipe_app">Wipe entire app</string>
    <string name="settings_panic_wipe_content">Wipe my content</string>
    <string name="settings_heading_login">Login</string>
    <string name="settings_security_passphrase_timeout">Lock Automatically</string>
    <string name="settings_security_passphrase_timeout_info">Locking allows your information to be encrypted and stored safely on your device. Choose timeout.</string>
	<string name="settings_security_passphrase_timeout1">Immediate</string>
    <string name="settings_security_passphrase_timeout2">1 minute</string>
    <string name="settings_security_passphrase_timeout3">1 hour</string>
    <string name="settings_security_passphrase_timeout4">1 day</string>
    <string name="settings_security_passphrase_timeout5">1 week</string>
    <string name="settings_enable_screenshots">Enable Screenshots</string>
	<string name="generic_second">second</string>
	<string name="generic_seconds">seconds</string>
	<string name="generic_minute">minute</string>
	<string name="generic_minutes">minutes</string>
	<string name="generic_hour">hour</string>
	<string name="generic_hours">hours</string>
	<string name="generic_day">day</string>
	<string name="generic_days">days</string>
	<string name="lbl_import">IMPORT</string>
    <string name="lbl_capture">CAPTURE</string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_video">Video</string>
    <string name="lbl_audio">Audio</string>
    <string name="lbl_text">Text</string>
</resources>