<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.guardianproject.securereaderinterface.UploadsChooseActivity"
    android:background="@drawable/background_news" >
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
    android:orientation="vertical">

	    <RelativeLayout
	        android:id="@+id/rlPhoto"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/value_tiny"
	        android:padding="@dimen/value_tiny" 
	        android:background="@drawable/settings_group_header_item_background">
			  	
	        	<TextView
	        	    android:id="@+id/tvPhoto"
	        	    style="@style/SettingsHeadingStyle"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_alignParentLeft="true"
	        	    android:layout_centerVertical="true"
	        	    android:layout_marginRight="@dimen/value_xxsmall"
	        	    android:text="@string/lbl_photo" />
	        
			  	<Button
			        android:id="@+id/btnImportPhoto"
			        style="@style/RoundedButtonStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="@dimen/value_large"
			        android:layout_toRightOf="@id/tvPhoto"
			        android:layout_alignParentRight="true"
			        android:layout_marginBottom="@dimen/value_xxsmall"
			        android:text="@string/lbl_import"/>
			  	
			  	<Button
			        android:id="@+id/btnCapturePhoto"
			        style="@style/RoundedButtonStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="@dimen/value_large"
			        android:layout_toRightOf="@id/tvPhoto"
			        android:layout_alignParentRight="true"
			        android:layout_below="@id/btnImportPhoto"
			        android:text="@string/lbl_capture"/>
		</RelativeLayout>
		
	    <RelativeLayout
	        android:id="@+id/rlVideo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/value_tiny"
	        android:padding="@dimen/value_tiny" 
	        android:background="@drawable/settings_group_header_item_background">
			  	
	        	<TextView
	        	    android:id="@+id/tvVideo"
	        	    style="@style/SettingsHeadingStyle"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_alignParentLeft="true"
	        	    android:layout_centerVertical="true"
	        	    android:layout_marginRight="@dimen/value_xxsmall"
	        	    android:text="@string/lbl_video" />
	        
			  	<Button
			        android:id="@+id/btnImportVideo"
			        style="@style/RoundedButtonStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="@dimen/value_large"
			        android:layout_toRightOf="@id/tvVideo"
			        android:layout_alignParentRight="true"
			        android:layout_marginBottom="@dimen/value_xxsmall"
			        android:text="@string/lbl_import"/>
			  	
			  	<Button
			        android:id="@+id/btnCaptureVideo"
			        style="@style/RoundedButtonStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="@dimen/value_large"
			        android:layout_toRightOf="@id/tvVideo"
			        android:layout_alignParentRight="true"
			        android:layout_below="@id/btnImportVideo"
			        android:text="@string/lbl_capture"/>
		</RelativeLayout>
		
	    <RelativeLayout
	        android:id="@+id/rlAudio"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/value_tiny"
	        android:padding="@dimen/value_tiny" 
	        android:background="@drawable/settings_group_header_item_background">
			  	
	        	<TextView
	        	    android:id="@+id/tvAudio"
	        	    style="@style/SettingsHeadingStyle"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_alignParentLeft="true"
	        	    android:layout_centerVertical="true"
	        	    android:layout_marginRight="@dimen/value_xxsmall"
	        	    android:text="@string/lbl_audio" />
	        
			  	<Button
			        android:id="@+id/btnImportAudio"
			        style="@style/RoundedButtonStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="@dimen/value_large"
			        android:layout_toRightOf="@id/tvAudio"
			        android:layout_alignParentRight="true"
			        android:layout_marginBottom="@dimen/value_xxsmall"
			        android:text="@string/lbl_import"/>
			  	
			  	<Button
			        android:id="@+id/btnCaptureAudio"
			        style="@style/RoundedButtonStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="@dimen/value_large"
			        android:layout_toRightOf="@id/tvAudio"
			        android:layout_alignParentRight="true"
			        android:layout_below="@id/btnImportAudio"
			        android:text="@string/lbl_capture"/>
		</RelativeLayout>
		
	    <RelativeLayout
	        android:id="@+id/rlText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/value_tiny"
	        android:padding="@dimen/value_tiny" 
	        android:background="@drawable/settings_group_header_item_background">
			  	
	        	<TextView
	        	    android:id="@+id/tvText"
	        	    style="@style/SettingsHeadingStyle"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_alignParentLeft="true"
	        	    android:layout_centerVertical="true"
	        	    android:layout_marginRight="@dimen/value_xxsmall"
	        	    android:text="@string/lbl_text" />
	        
			  	<Button
			        android:id="@+id/btnCaptureText"
			        style="@style/RoundedButtonStyle"
			        android:layout_width="wrap_content"
			        android:layout_height="@dimen/value_large"
			        android:layout_toRightOf="@id/tvText"
			        android:layout_alignParentRight="true"
			        android:text="@string/lbl_capture"/>
		</RelativeLayout>
	</LinearLayout> 
</ScrollView>